# obs-modded

./: CMakePresets.json
.github/workflows/: build-dual-vcam.yml
cmake/common/: versionconfig.cmake
plugins/win-dshow/: CMakeLists.txt  dshow-plugin.cpp  vcam-settings.cpp  vcam-settings.hpp  virtualcam.c  virtualcam2.c
plugins/win-dshow/virtualcam2-module/: CMakeLists.txt  virtualcam2-filter.cpp  virtualcam2-filter.hpp  virtualcam2-guid.h.in  virtualcam2-install.bat.in  virtualcam2-module.cpp  virtualcam2-uninstall.bat.in
plugins/win-dshow/virtualcam2-module/cmake/windows/: virtualcam2-module-arm64.def  virtualcam2-module32.def  virtualcam2-module64.def
shared/obs-shared-memory-queue/: shared-memory-queue.c  shared-memory-queue.h
